--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <img class="image" src="ski.jpg">
+  <div class="full-form">
+    <form>
+
+    </form>
+  </div>
 </body>
 </html>
