Create logo and style

--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <img class="image" src="ski.jpg">
+  <div id="left-container">
+    <img class="image" src="ski.jpg">
+    <div id="logo-background">
+      <img id="logo" src="odin-lined.png">
+      <div id="business-name">ODIN SKIING</div>
+    </div>
+  </div>
   <div class="full-form">
     <form>
       <div class='form-row-one'>
