--- a/index.html
+++ b/index.html
@@ -16,38 +16,42 @@
   </div>
   <div class="right-container">
     <div class="top-right-container">
-      <div>Join our website to get the best ski holiday offers from around the world! Also dive into the world of skiing with up to date news on everything snow sports.</div>
-      <div>You know you want to.</div>
+      <div id="information">
+        <div>Join our website to get the best ski holiday offers from around the world!<br> Also dive into the world of skiing with up to date news on everything snow sports.</div>
+        <div id="comment">You know you want to.</div>
+      </div>
     </div>
     <div class="middle-right-container">
-      <div>Let's do this!</div>
-      <form>
-        <div class='form-row-one'>
-          <label for='first-name'>FIRST NAME</label>
-          <input id='first-name' name='first-name' type='text'/>
-          <label for='last-name'>LAST NAME</label>
-          <input id='last-name' name='last-name' type='text'/>        
-        </div>
-        <div class="form-row-two">
-          <label for="email">EMAIL</label>
-          <input id="email" 
-                type="email"
-                name="email"
-                placeholder="joe@example.com"/>
-          <label for='phone-number'>PHONE NUMBER</label>
-          <input id='phone-number' 
-                name='phone-number' 
-                type='tel'
-                pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"
-                placeholder="111-111-1111"/>        
-        </div>
-        <div class="form-row-three">
-          <label for="password">PASSWORD</label>
-          <input id="password" name="password" type="password">
-          <label for="confirm-password">CONFIRM PASSWORD</label>
-          <input id="confirm-password" name="confirm-password" type="password">        
-        </div>
-      </form>
+      <div id="content">
+        <div>Let's do this!</div>
+        <form>
+          <div class='form-row-one'>
+            <label for='first-name'>FIRST NAME</label>
+            <input id='first-name' name='first-name' type='text'/>
+            <label for='last-name'>LAST NAME</label>
+            <input id='last-name' name='last-name' type='text'/>        
+          </div>
+          <div class="form-row-two">
+            <label for="email">EMAIL</label>
+            <input id="email" 
+                  type="email"
+                  name="email"
+                  placeholder="joe@example.com"/>
+            <label for='phone-number'>PHONE NUMBER</label>
+            <input id='phone-number' 
+                  name='phone-number' 
+                  type='tel'
+                  pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"
+                  placeholder="111-111-1111"/>        
+          </div>
+          <div class="form-row-three">
+            <label for="password">PASSWORD</label>
+            <input id="password" name="password" type="password">
+            <label for="confirm-password">CONFIRM PASSWORD</label>
+            <input id="confirm-password" name="confirm-password" type="password">        
+          </div>
+        </form>
+      </div>
     </div>
     <div class="bottom-right-container">
       <button type="submit">Create Account</button>
