--- a/index.html
+++ b/index.html
@@ -23,32 +23,44 @@
     </div>
     <div class="middle-right-container">
       <div id="content">
-        <div>Let's do this!</div>
+        <div id="caption">Let's do this!</div>
         <form>
           <div class='form-row-one'>
-            <label for='first-name'>FIRST NAME</label>
-            <input id='first-name' name='first-name' type='text'/>
-            <label for='last-name'>LAST NAME</label>
-            <input id='last-name' name='last-name' type='text'/>        
+            <div class="form-layout">
+              <label for='first-name'>FIRST NAME</label>
+              <input id='first-name' name='first-name' type='text'/>
+            </div>
+            <div class="form-layout">
+              <label for='last-name'>LAST NAME</label>           
+              <input id='last-name' name='last-name' type='text'/>
+            </div>        
           </div>
           <div class="form-row-two">
-            <label for="email">EMAIL</label>
-            <input id="email" 
-                  type="email"
-                  name="email"
-                  placeholder="joe@example.com"/>
-            <label for='phone-number'>PHONE NUMBER</label>
-            <input id='phone-number' 
-                  name='phone-number' 
-                  type='tel'
-                  pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"
-                  placeholder="111-111-1111"/>        
+            <div class="form-layout">
+              <label for="email">EMAIL</label>
+              <input id="email" 
+                    type="email"
+                    name="email"
+                    placeholder="joe@example.com"/>
+            </div>
+            <div class="form-layout">
+              <label for='phone-number'>PHONE NUMBER</label>
+              <input id='phone-number' 
+                    name='phone-number' 
+                    type='tel'
+                    pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"
+                    placeholder="111-111-1111"/>
+            </div>
           </div>
           <div class="form-row-three">
-            <label for="password">PASSWORD</label>
-            <input id="password" name="password" type="password">
-            <label for="confirm-password">CONFIRM PASSWORD</label>
-            <input id="confirm-password" name="confirm-password" type="password">        
+            <div class="form-layout">
+              <label for="password">PASSWORD</label>                
+              <input id="password" name="password" type="password">
+            </div>        
+            <div class="form-layout">
+              <label for="confirm-password">CONFIRM PASSWORD</label>
+              <input id="confirm-password" name="confirm-password" type="password">  
+            </div>      
           </div>
         </form>
       </div>
