Edit phone number to except no dashes and style invalid

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <div class='form-row-one'>
             <div class="form-layout">
               <label for='first-name'>FIRST NAME</label>
-              <input id='first-name' name='first-name' type='text'/>
+              <input id='first-name' name='first-name' type='text' />
             </div>
             <div class="form-layout">
               <label for='last-name'>LAST NAME</label>           
@@ -48,18 +48,18 @@
               <input id='phone-number' 
                     name='phone-number' 
                     type='tel'
-                    pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
+                    pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}|[0-9]{10}"
                     placeholder="111-111-1111"/>
             </div>
           </div>
           <div class="form-row-three">
             <div class="form-layout">
               <label for="password">PASSWORD</label>                
-              <input id="password" name="password" type="password">
+              <input id="password" name="password" type="password" >
             </div>        
             <div class="form-layout">
               <label for="confirm-password">CONFIRM PASSWORD</label>
-              <input id="confirm-password" name="confirm-password" type="password">  
+              <input id="confirm-password" name="confirm-password" type="password" >  
             </div>      
           </div>        
       </div>
