--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="bottom-right-container">
       <button type="submit">Create Account</button>
     </form>
-      <div>Already have an account? Log in</div>  
+      <div>Already have an account? <a href="">Log in</a></div>  
     </div>  
   </div>
 </body>
