--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
               <label for="confirm-password">CONFIRM PASSWORD</label>
               <input id="confirm-password" name="confirm-password" type="password" >  
             </div>      
+          </div>
+          <div id="pwd-error" class="pwd-error-hidden">
+            * Passwords do not match
           </div>        
       </div>
     </div>
@@ -70,5 +73,6 @@
       <div>Already have an account? <a href="">Log in</a></div>  
     </div>  
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
